<resources>
    <string name="app_name">SASocial Network</string>


    <string name="hint_email_login">Email</string>
    <string name="titile_appbar_login">Log In</string>
    <string name="hint_password_login">Password</string>
    <string name="txt_forgotpassword_login">Forget Password?</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_or_login">OR</string>
    <string name="btn_facebook_login">Facebook</string>
    <string name="btn_twitter_login">Twitter</string>




    <string name="titile_appbar_signup">Sign Up</string>
    <string name="hint_conformation_signup">Conformation Password</string>
    <string name="btn_signup">Sign Up</string>
</resources>
