<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
            android:id="@+id/CrdAppBarLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@drawable/ic_cardbackgournd_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="@dimen/_16sdp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_cardbackgournd_login"
                android:text="@string/titile_appbar_login"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"/>

    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LytInputEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36sdp"
            android:padding="@dimen/_4sdp"
            android:textColorHint="@color/textHint"
            app:layout_constraintTop_toBottomOf="@+id/CrdAppBarLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <AutoCompleteTextView
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ovel_shape"
                android:textColorHint="@color/textHint"
                android:drawablePadding="4dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email_login"
                android:maxLines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LytInputEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:hintEnabled="false"
            android:padding="@dimen/_4sdp"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/LytInputEmailLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp">

        <AutoCompleteTextView
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ovel_shape"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/_4sdp"
                android:textColorHint="@color/textHint"
                android:hint="@string/hint_password_login"
                android:maxLines="1"
                android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/txt_forgotpassword_login"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@+id/LytInputEmailPassword"/>

    <Button
            android:id="@+id/BtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bck_ovel_shape_button"
            android:text="@string/txt_btn_login"
            android:textColor="#fff"
            android:layout_margin="@dimen/_32sdp"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/BtnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            android:weightSum="10"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout2">

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/textHint"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/white"
                android:text="@string/txt_or_login"
                android:clickable="false"
                android:textColor="@color/textHint"/>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/textHint"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
            android:id="@+id/CrdFacebookLogin"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6sdp"
            android:elevation="@dimen/_8sdp"
            android:backgroundTint="@color/facebookButton"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:textColor="@android:color/white"
                  android:padding="@dimen/_10sdp"
                  android:text="@string/btn_facebook_login"/>

    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/CrdTwitterLogin"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6sdp"
            android:elevation="@dimen/_8sdp"
            android:backgroundTint="@color/twitterButton"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginTop="@dimen/_28sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:textColor="@android:color/white"
                  android:padding="@dimen/_10sdp"
                  android:text="@string/btn_twitter_login"/>

    </androidx.cardview.widget.CardView>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignup"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>